--- a/index.html
+++ b/index.html
@@ -5,17 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Word Guess Game</title>
 </head>
 <body>
     <div class="container">
-        <header>
+        <div class="jumbotron">
             <h1>Hangman Game</h1>
             <h3>90s Edition</h3>
-        </header>
-        <div class="Instructions">Press any Key to Start</div>
-        <div class="Wins">Wins</div>
-        <div class="Losses">Losses</div>
+        </div>
+        <div class="row">
+            <p>Instructions: Press a Key to Start</p>
+        </div>
+        <div class="row">
+            <p>Guess the Word</p>
+            <p id = "hidden word"></p>
+        </div>
+        <div class="row">
+            <p>Wrong Letters Guessed</p>
+            <p id="Wrong Guesses"></p>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <p>Wins</p>
+                <p id ="Wins"></p>
+            </div>
+            <div class="col-md-6">
+                <p>Losses</p>
+                <p id ="Losses"></p>
+                </div>
+        </div>
     </div>
 </body>
 <script type= "text/javascript" src= "assets/javascript/game.js"></script>
