updated code started styling

--- a/index.html
+++ b/index.html
@@ -10,30 +10,34 @@
 </head>
 <body>
     <div class="container">
-        <div class="jumbotron">
+        <div class= "Header">
             <h1>Hangman Game</h1>
             <h3>90s Edition</h3>
         </div>
         <div class="row">
-            <p>Instructions: Press a Key to Start</p>
+            <p>Instructions: Select a Letter to Start</p>
         </div>
         <div class="row">
             <p>Guess the Word</p>
             <p id = "hidden word"></p>
         </div>
         <div class="row">
-            <p>Wrong Letters Guessed</p>
+            <p>Wrong Letters Guessed:</p>
             <p id="Wrong Guesses"></p>
         </div>
         <div class="row">
-            <div class="col-md-6">
-                <p>Wins</p>
+            <div class="col-md-4">
+                <p>Guesses Left:</p>
+                <p id ="Guesses Left"></p>
+            </div>
+            <div class="col-md-4">
+                <p>Wins:</p>
                 <p id ="Wins"></p>
             </div>
-            <div class="col-md-6">
-                <p>Losses</p>
+            <div class="col-md-4">
+                <p>Losses:</p>
                 <p id ="Losses"></p>
-                </div>
+            </div>
         </div>
     </div>
 </body>
